# fast-stack

./: .pre-commit-config.yaml  README.md  bootstrap.sh  hello.py  pyproject.toml  tasks.py
fast_stack/: __init__.py  app.py  hello.py
tests/: test_basic.py
