[project]
name = "fast-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "faststream>=0.5.28",
]

[tool.uv]
dev-dependencies = [
    "invoke>=2.2.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]
