[tool.poetry]
name = "fast-stack"
version = "0.0.1"
description = "Demo of a modern full stack application using FastAPI, FastStream and FastUI"
authors = ["Gabriel G <gabriel59kg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
faststream = "^0.5.29"
fastui = "^0.7.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
